--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,8 @@ body,
 .MuiButtonBase-root:not([disabled]) {
   color: inherit !important;
 }
+
+.MuiAlert-root {
+  border-radius: 0 !important;
+  color: inherit !important;
+}
